--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -22,6 +22,10 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src/**/*.ts", "prisma/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "prisma/**/*.ts",
+    "src/halls/types/hall.types.ts "
+  ],
   "exclude": ["node_modules", "dist", "test"]
 }
